--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,10 @@
     margin: 0;
  }
  .img
- {
+ {  display: block;
     max-width: 100%;
     height: auto;
-    display: block;
+    
  }
 
   .a {
@@ -152,9 +152,10 @@ text-decoration: none
     margin-left: auto;
 }
 .contacts-list 
-{display: flex;
-gap: 40px;
-align-items: center;
+{
+    display: flex;
+    gap: 40px;
+    align-items: center;
 }
 .contacts-link
 {   color: #434455;
@@ -176,6 +177,14 @@ align-items: center;
 /* Adress section  end*/
 
 /* Header section */
+.container-baner { 
+    display: block;
+    max-width: 1158px;
+    padding-top: 188px;
+    padding-bottom: 188px;
+    padding-left: 472px;
+    padding-right: 472px;
+    ;}
 .banner
 {
     background-color: #2E2F42;
@@ -183,14 +192,16 @@ align-items: center;
 }
 .header-title 
 {
-
 font-family: "Roboto",sans-serif;
 font-weight: 700;
 font-size: 56px;
 line-height: 107%;
 letter-spacing: 0.02em;
 text-align: center;
-color: #FFFFFF}
+color: #FFFFFF;
+max-width: 496px;
+
+}
 
 .button-baner
 {
@@ -202,6 +213,7 @@ color: #FFFFFF}
     letter-spacing: 0.04em;;
     color: #FFFFFF;
     cursor: pointer;
+
 }
 .button-baner:hover,
 .button-baner:focus
