--- a/css/styles.css
+++ b/css/styles.css
@@ -181,10 +181,10 @@ text-decoration: none
     display: block;
     max-width: 1158px;
     padding-top: 188px;
-    padding-bottom: 188px;
+    padding-bottom: 292px;
     padding-left: 472px;
     padding-right: 472px;
-    ;}
+    }
 .banner
 {
     background-color: #2E2F42;
@@ -199,7 +199,8 @@ line-height: 107%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #FFFFFF;
-max-width: 496px;
+min-width: 496px;
+
 
 }
 
@@ -213,6 +214,12 @@ max-width: 496px;
     letter-spacing: 0.04em;;
     color: #FFFFFF;
     cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    text-align: center;
+    border-radius: 4px;
+    border: none;
 
 }
 .button-baner:hover,
