--- a/css/styles.css
+++ b/css/styles.css
@@ -177,18 +177,17 @@ text-decoration: none
 /* Adress section  end*/
 
 /* Header section */
-.container-baner { 
+.container-banner { 
     display: block;
-    max-width: 1158px;
-    padding-top: 188px;
-    padding-bottom: 292px;
-    padding-left: 472px;
-    padding-right: 472px;
+        max-width: 1158px;
+        
     }
 .banner
 {
     background-color: #2E2F42;
-    text-align: center
+    text-align: center;
+    padding: 188px 0 188px;
+   
 }
 .header-title 
 {
@@ -199,7 +198,7 @@ line-height: 107%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #FFFFFF;
-min-width: 496px;
+max-width: 496px;
 
 
 }
