add markup header

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,11 @@ max-width: 496px;
     color: #434455;
     background-color: #FFFFFF;
 }
+.container
+ {  
+    
+    
+ }
 .about-title
 {
     text-transform: capitalize;
@@ -365,4 +370,17 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color:#F4F4FD;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
