add markup header

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
 {   display: flex;
     border-bottom: 1px solid #e7e9fc;
 }
-.header-container 
+.container 
 {
     display: flex;
     align-items: center;
