--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ text-decoration: none
  { 
     display: block;
     max-width: 1158px;
+    justify-content: center;
 }
 .banner
 {
@@ -200,7 +201,8 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #FFFFFF;
 max-width: 496px;
-
+justify-content: center;
+text-align: center;
 
 }
 
@@ -220,6 +222,7 @@ max-width: 496px;
     text-align: center;
     border-radius: 4px;
     border: none;
+    justify-content: center;
 
 }
 .button-baner:hover,
@@ -234,13 +237,25 @@ max-width: 496px;
     font-family: "Roboto",sans-serif;
     color: #434455;
     background-color: #FFFFFF;
+    padding: 120px 0 120px;
 }
-
+.container,.about-container 
+{
+    width: 1158px;
+    display: flex;
+    gap: 24px;
+    
+}
 .about-title
 {
     text-transform: capitalize;
-}
 
+}
+.abaut-list-item
+{
+    display: flex;
+    width: calc((100% - 72px) / 4);
+}
 .about-list-title
  {
     font-weight: 500;
