--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 .a {
     text-decoration: none;
-    color: #434455;
+    color: currentColor;
  }
  .body {
      font-family: "Roboto", sans-serif;
@@ -34,7 +34,7 @@
     margin: 0;
  }
  .img
- {  display: block;
+ { display: block;
     max-width: 100%;
     height: auto;
     
@@ -50,7 +50,7 @@
 }
 
 /* Common styles */
- .container 
+ .container
  {
     max-width: 1158px;
     padding: 0 15px;
@@ -62,7 +62,7 @@
 {   display: flex;
     border-bottom: 1px solid #e7e9fc;
 }
-.container 
+.container-header
 {
     display: flex;
     align-items: center;
@@ -179,11 +179,11 @@ text-decoration: none
 
 /* Header section */
 
-.container-banner
+.container.container-baner
  { 
-    display: block;
-    max-width: 1158px;
-    justify-content: center;
+    max-width: 1158px;   
+    margin: auto 48px; 
+   justify-content: center;
 }
 .banner
 {
@@ -231,6 +231,7 @@ text-align: center;
     background-color: #404BBF;
 }
 /* Header section end */
+
 /* About section */
 .about 
 {
@@ -240,25 +241,26 @@ text-align: center;
     padding: 120px 0 120px;
 }
 
-.about-container
+.container.about-container
 {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 1128px;
-    gap: 24px;
 }
+.about-list
+{   display: flex;
+    gap: 24px;  
+
+}
+
 .about-title
 {
     text-transform: capitalize;
+    margin-bottom: 8px;
 
 }
 .about-list-item
 {
     width: calc((100% - 72px) / 4);
-    justify-content: center;
-    text-align: center;
-    display: flex;
+    
 }
 .about-list-title
  {
