add mark up header

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,12 +179,7 @@ text-decoration: none
 
 /* Header section */
 
-.container.container-baner
- { 
-    max-width: 1158px;   
-    margin: auto 48px; 
-   justify-content: center;
-}
+
 .banner
 {
     background-color: #2E2F42;
@@ -203,6 +198,7 @@ color: #FFFFFF;
 max-width: 496px;
 justify-content: center;
 text-align: center;
+margin:auto
 
 }
 
@@ -223,6 +219,7 @@ text-align: center;
     border-radius: 4px;
     border: none;
     justify-content: center;
+    margin: 48px auto; 
 
 }
 .button-baner:hover,
@@ -246,21 +243,19 @@ text-align: center;
     width: 1128px;
 }
 .about-list
+
 {   display: flex;
     gap: 24px;  
-
 }
 
 .about-title
 {
     text-transform: capitalize;
     margin-bottom: 8px;
-
 }
 .about-list-item
 {
     width: calc((100% - 72px) / 4);
-    
 }
 .about-list-title
  {
