--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,11 @@
     font-family: "Roboto", "Raleway";
     list-style-type: none;
 }
-.a {
+a {
     text-decoration: none;
     color: currentColor;
  }
- .body {
+ body {
      font-family: "Roboto", sans-serif;
      color: #434455;
      background-color: #FFFFFF;
@@ -14,37 +14,37 @@
 
 
  /* Reset some default styles */
-.ul,.ol 
+ul,ol 
 {
     list-style-type: none;
     padding: 0;
     margin: 0;
  }
- .h1,.h2,.h3,.h4,.h5,.h6
+ h1,h2,h3,h4,h5,h6
  {
     font-family: "Raleway", sans-serif;
     color: #2E2F42;
     margin: 0;
     padding: 0;
  }
- .p
+ p
  {
     font-family: "Roboto", sans-serif;
     color: #434455;
     margin: 0;
  }
- .img
+ img
  { display: block;
     max-width: 100%;
     height: auto;
     
  }
 
-  .a {
+  a {
       text-decoration: none;
       color: #434455;
   }
-  .a:hover, .a:focus
+  a:hover, .a:focus
  {
     text-decoration: underline;
 }
