--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ margin:auto
 .about-list-item
 {
     width: calc((100% - 72px) / 4);
-    margin-bottom: 8px;;
+    
 }
 .about-list-title
  {
@@ -261,6 +261,7 @@ margin:auto
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .about-list-text
