--- a/css/styles.css
+++ b/css/styles.css
@@ -275,9 +275,11 @@ margin:auto
 /* About section end */
 
 /* Workers section */
-.container .workers-container
-{width: calc((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px;}
+.container .workers-container 
+{ 
+    
+    padding: 120px 0 120px;
+}
 .workers 
 {
     background-color: #F4F4FD;
@@ -296,12 +298,15 @@ border-radius: 0px 0px 4px 4px;}
     text-transform: capitalize;
     background-color: #F4F4FD;
     letter-spacing: 0.02em;
-    margin-bottom: 72px;  
+    margin-bottom: 72px;
+   
+    
 }
 .workers-list-item
 {
     background-color: #FFFFFF;
-
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 .workers-list
 { 
