--- a/css/styles.css
+++ b/css/styles.css
@@ -306,6 +306,7 @@ margin:auto
 {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
+    border: 1px solid #2E2F42;
     border-radius: 0px 0px 4px 4px;
 }
 .workers-list
@@ -378,6 +379,9 @@ color: #434455;
 /* Portfolio section end */
 
 /* Footer section */
+.container .container-footer 
+{ padding: 100px 0;
+}
 .footer 
 {   font-family: "Raleway", sans-serif;
     background-color: #2E2F42;
@@ -390,6 +394,8 @@ color: #434455;
     font-size: 18px;
     line-height: 117%;
     letter-spacing: 0.03em;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 .logo-footer-raleway 
 {
@@ -401,6 +407,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color:#F4F4FD;
+max-width: 264px;
 }
 .visually-hidden {
     position: absolute;
