add markup header

--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ color: #434455;
 {   font-family: "Raleway", sans-serif;
     background-color: #2E2F42;
     color: #F4F4FD;
+    padding: 100px 0;
 }
 .footer-logo
 {   color: #4D5AE5;
