--- a/css/styles.css
+++ b/css/styles.css
@@ -399,16 +399,14 @@ color: #434455;
 }
 /* Portfolio section end */
 
-/* Footer section */
-.container .container-footer 
-{ padding: 100px 0;
-}
-.footer 
-{   font-family: "Raleway", sans-serif;
+/* Footer section*/
+
+
+.footer
+{   font-family: "Relaway", sans-serif;
     background-color: #2E2F42;
-    color: #F4F4FD;
     padding: 100px 0;
-}
+} 
 .footer-logo
 {   color: #4D5AE5;
     text-transform: uppercase;
@@ -419,17 +417,28 @@ color: #434455;
     display: inline-block;
     margin-bottom: 16px;
 }
-.logo-footer-raleway 
+.logo-footer-relaway 
 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 117%;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     color: #F4F4FD;
+    text-decoration: none;
+
 }
+
 .footer-text 
-{font-family:"Roboto", sans-serif;
+{
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color:#F4F4FD;
 max-width: 264px;
+
+/* Footer section end */
 }
 .visually-hidden {
     position: absolute;
