add markup header

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,8 @@ text-align: center;
 /* Workers section end */
 
 /* Portfolio section*/
-.portfolio-container
+
+.container.portfolio-container
 {
     padding: 32px 16px;
     border: 1px solid #e7e9fc
