--- a/css/styles.css
+++ b/css/styles.css
@@ -349,7 +349,6 @@ text-align: center;
 
 .container.portfolio-container
 {
-    padding: 32px 16px;
     border: 1px solid #e7e9fc
 }
 .portfolio 
@@ -389,12 +388,13 @@ margin-bottom: 8px;
 }
 .portfolio-list-item
 { width: calc((100% - 48px)/ 3);
-  border-top: none;
+ 
 }
-.porfolio-name 
+.portfolio-name 
 {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
+    border-top: none
 }
 .portfolio-list-text
 {
