--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,7 @@ text-align: center;
     column-gap: 24px;
     row-gap: 48px;
     flex-wrap: wrap;
+    width: calc((100% - 48px) / 4);
 }
 .portfolio-list-title
 {
