--- a/css/styles.css
+++ b/css/styles.css
@@ -386,9 +386,8 @@ line-height: 120%;
 letter-spacing: 0.02em;
 margin-bottom: 8px;
 }
-.portfolio-list-item
-{
-width: calc((100% - 48px) / 3);
+.portfolio-list-item {
+    width: calc((100% - 48px) / 3);
 }
 .portfolio-name 
 {
