--- a/css/styles.css
+++ b/css/styles.css
@@ -347,10 +347,7 @@ text-align: center;
 
 /* Portfolio section*/
 
-.container.portfolio-container
-{
-    border: 1px solid #e7e9fc
-}
+
 .portfolio 
 {
     font-family:"Roboto", sans-serif;
@@ -386,7 +383,8 @@ line-height: 120%;
 letter-spacing: 0.02em;
 margin-bottom: 8px;
 }
-.portfolio-list-item {
+.portfolio-list-item 
+{
     width: calc((100% - 48px) / 3);
 }
 .portfolio-name 
@@ -422,7 +420,7 @@ color: #434455;
     display: inline-block;
     margin-bottom: 16px;
 }
-.logo-footer-relaway 
+.logo-footer-raleway 
 {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
