--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ margin:auto
     border-radius: 4px;
     border: none;
     justify-content: center;
-    margin: 48px auto; 
+    margin: 48px auto 0 auto; 
 
 }
 .button-baner:hover,
